Only run test suite on Linux (skip Mac)
We seem to be having issues with memory limits on Mac when running this
test suite. So simply skip it for now. Running the test suite on Linux
is better than not running it at all. We can revisit testing on Mac once
we have a configuration of OpenBLAS that will work with the test suite.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -50,10 +50,14 @@ requirements:
     - scipy
 
 test:
-  source_files:
-    - test_*.py
+  source_files:                 # [linux]
+    - test_*.py                 # [linux]
+  files:                        # [linux]
+    - run_linux_test.py         # [linux]
   imports:
     - spams
+  commands:                     # [linux]
+    - python run_linux_test.py  # [linux]
 
 about:
   home: http://spams-devel.gforge.inria.fr/
