--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -50,14 +50,15 @@ requirements:
     - scipy
 
 test:
-  source_files:                 # [linux]
-    - test_*.py                 # [linux]
-  files:                        # [linux]
-    - run_linux_test.py         # [linux]
+  source_files:
+    - test_decomp.py     # [linux]
+    - test_dictLearn.py
+    - test_linalg.py
+    - test_prox.py       # [linux]
+    - test_spams.py
+    - test_utils.py
   imports:
     - spams
-  commands:                     # [linux]
-    - python run_linux_test.py  # [linux]
 
 about:
   home: http://spams-devel.gforge.inria.fr/
