--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -51,12 +51,18 @@ requirements:
 
 test:
   source_files:
+    # Test data
+    - boat.png
+    - lena.png
+    # Test suite
     - test_decomp.py     # [linux]
     - test_dictLearn.py
     - test_linalg.py
     - test_prox.py       # [linux]
     - test_spams.py
     - test_utils.py
+  requires:
+    - pillow
   imports:
     - spams
 
