On macOS skip lena image tests
As we were getting segfaults from OpenBLAS about memory again (this time
with the image tests), simply skip the tests that use the larger
`lena.png` image and stick to the tests using the smaller `boat.png`
test. Since these seem to pass locally with the `boat.png`, this seems
to confirm the theory that OpenBLAS is running into memory issues on
macOS and not something else.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -53,7 +53,7 @@ test:
   source_files:
     # Test data
     - boat.png
-    - lena.png
+    - lena.png           # [linux]
     # Test suite
     - test_decomp.py     # [linux]
     - test_dictLearn.py
