Build against NumPy 1.9 as a minimum
Drops the old `numpy x.x` pinnings in place of building against the
oldest supported version of NumPy. To our knowledge that is NumPy 1.9.
Given the constraint of SciPy, this cannot be older than NumPy 1.9.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -44,7 +44,7 @@ requirements:
     - python
     - blas 1.1 {{ variant }}
     - openblas 0.2.19|0.2.19.*
-    - numpy x.x
+    - numpy 1.9.*
     - scipy
     # For tests.
     - pillow
@@ -54,7 +54,7 @@ requirements:
     - python
     - blas 1.1 {{ variant }}
     - openblas 0.2.19|0.2.19.*
-    - numpy x.x
+    - numpy >=1.9
     - scipy
 
 test:
