Relax `numpy` pinning
We have the same pinning in `conda-forge-pinning` of `numpy` version
`1.9` on Unix. So we don't need it explicitly here. Hence we go ahead
and drop it. Re-rendering will pull in the pinning from
`conda-forge-pinning`.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,7 +30,7 @@ requirements:
     - python
     - blas 1.1 {{ variant }}
     - openblas
-    - numpy 1.9.*
+    - numpy
     - scipy
     # For tests.
     - pillow
