Use the `compiler` syntax and split `build`/`host`
In `conda-build` 3 compilers are specified cross OSes by using the
`compiler` syntax. This can configured to supply custom compilers as is
done in `conda-forge` or the ones used by `defaults`. Re-rendering will
pull in this configuration from `conda-forge-pinning`.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,7 +26,8 @@ build:
 
 requirements:
   build:
-    - gcc
+    - {{ compiler("cxx") }}
+  host:
     - python
     - blas 1.1 {{ variant }}
     - openblas
@@ -35,7 +36,6 @@ requirements:
     # For tests.
     - pillow
   run:
-    - libgcc
     - python
     - blas 1.1 {{ variant }}
     - openblas
