Require `openmp` on macOS
As we need OpenMP to build the package and `defaults` copy of `clang`
doesn't seem to ship with `openmp` normally. Explicitly require
`openmp` as a dependency to make sure this need is satisfied.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,6 +31,7 @@ requirements:
     - python
     - blas 1.1 {{ variant }}
     - openblas
+    - openmp 4.0.*                   # [osx]
     - numpy
     - scipy
     # For tests.
@@ -39,6 +40,7 @@ requirements:
     - python
     - blas 1.1 {{ variant }}
     - openblas
+    - openmp 4.0.*                   # [osx]
     - {{ pin_compatible('numpy') }}
     - scipy
     - six
