MNT: Re-rendered with conda-smithy 3.1.12 and pinning 2018.09.27

--- a/.ci_support/linux_python2.7.yaml
+++ b/.ci_support/linux_python2.7.yaml
@@ -1,5 +1,11 @@
+channel_sources:
+- conda-forge,defaults
+channel_targets:
+- conda-forge main
 cxx_compiler:
 - toolchain_cxx
+docker_image:
+- condaforge/linux-anvil
 numpy:
 - '1.9'
 openblas:
