--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,7 +31,7 @@ requirements:
     - python
     - blas 1.1 {{ variant }}
     - openblas
-    - openmp 4.0.*                   # [osx]
+    - llvm-openmp 4.0.*              # [osx]
     - numpy
     - scipy
     # For tests.
@@ -40,7 +40,7 @@ requirements:
     - python
     - blas 1.1 {{ variant }}
     - openblas
-    - openmp 4.0.*                   # [osx]
+    - llvm-openmp 4.0.*              # [osx]
     - {{ pin_compatible('numpy') }}
     - scipy
     - six
