Use the right `openmp` with the right compiler
Selectively use `llvm-openmp` with the new compilers and `openmp` with
the legacy compilers. As it is intended to use `llvm-openmp` with the
new compilers and `openmp` was being used to make things needing OpenMP
work on the legacy compilers.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,7 +31,11 @@ requirements:
     - python
     - blas 1.1 {{ variant }}
     - openblas
-    - llvm-openmp 4.0.*              # [osx]
+{% if compiler("cxx").startswith("toolchain_cxx") %}
+    - openmp 4.0.*                   # [osx]
+{% else %}
+    - llvm-openmp                    # [osx]
+{% endif %}
     - numpy
     - scipy
     # For tests.
@@ -40,7 +44,11 @@ requirements:
     - python
     - blas 1.1 {{ variant }}
     - openblas
-    - llvm-openmp 4.0.*              # [osx]
+{% if compiler("cxx").startswith("toolchain_cxx") %}
+    - openmp 4.0.*                   # [osx]
+{% else %}
+    - llvm-openmp                    # [osx]
+{% endif %}
     - {{ pin_compatible('numpy') }}
     - scipy
     - six
