MNT: Re-rendered with conda-smithy 3.2.2 and pinning 2018.12.12
Now that the compilers are no longer being overridden on macOS,
re-render to switch the legacy compilers on macOS.

--- a/.ci_support/osx_python2.7.yaml
+++ b/.ci_support/osx_python2.7.yaml
@@ -5,7 +5,7 @@ channel_sources:
 channel_targets:
 - conda-forge main
 cxx_compiler:
-- clangxx
+- toolchain_cxx
 macos_machine:
 - x86_64-apple-darwin13.4.0
 macos_min_version:
