Add GPL to `license_family`
This value of `license_family` is supported by `conda-build` and
`conda-smithy`. Hopefully will soon be included in `conda-verify` as
well, which will silence the `C1115` lint error that it is raising.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -65,6 +65,7 @@ test:
 about:
   home: http://spams-devel.gforge.inria.fr/
   license: GPL 3
+  license_family: GPL
   summary: An optimization toolbox for solving various sparse estimation problems.
 
 extra:
