Package the license file
Make sure the license file is included in the Conda package for end user
inspection.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -66,6 +66,7 @@ about:
   home: http://spams-devel.gforge.inria.fr/
   license: GPL 3
   license_family: GPL
+  license_file: LICENSE.txt
   summary: An optimization toolbox for solving various sparse estimation problems.
 
 extra:
