Use `pip` to build and install the package
As conda-forge now prefers using `pip` for building and installing
Python packages, add `pip` as a requirement in `host` and update the
build step to use `pip`.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,6 +29,7 @@ requirements:
     - {{ compiler("cxx") }}
   host:
     - python
+    - pip
     - blas 1.1 {{ variant }}
     - openblas
     - openmp 4.0.*                   # [osx]
