Use `llvm-openmp` with new compilers on macOS
As `llvm-openmp` is built alongside the new compilers and included in
`defaults`, make use of it instead of `openmp` on macOS to provide
OpenMP support.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -32,13 +32,13 @@ requirements:
     - pip
     - blas 1.1 {{ variant }}
     - openblas
-    - openmp 4.0.*                   # [osx]
+    - llvm-openmp                    # [osx]
     - numpy
   run:
     - python
     - blas 1.1 {{ variant }}
     - openblas
-    - openmp 4.0.*                   # [osx]
+    - llvm-openmp                    # [osx]
     - {{ pin_compatible('numpy') }}
     - scipy
     - six
