Require `llvm-openmp` in `build` as well
Since the new compilers need to be able to find `omp.h`, add
`llvm-openmp` to `requirements/build` as well.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,6 +27,7 @@ build:
 requirements:
   build:
     - {{ compiler("cxx") }}
+    - llvm-openmp                    # [osx]
   host:
     - python
     - pip
