--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,7 +20,7 @@ source:
     - spams.py.patch
 
 build:
-  skip: true  # [win]
+  skip: true  # [win or (osx and cxx_compiler == "toolchain_cxx")]
   number: 1201
   detect_binary_files_with_prefix: true
   features:
