--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,12 +103,12 @@ jobs:
       - run:
           # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
           command: ./.circleci/run_docker_build.sh
-  build_osx_python2.7:
+  build_osx_cxx_compilerclangxxpython2.7:
     working_directory: ~/test
     macos:
       xcode: "9.0"
     environment:
-      - CONFIG: "osx_python2.7"
+      - CONFIG: "osx_cxx_compilerclangxxpython2.7"
     steps:
       - checkout
       - run:
@@ -119,12 +119,12 @@ jobs:
       - run:
           # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
           command: ./.circleci/run_osx_build.sh
-  build_osx_python3.6:
+  build_osx_cxx_compilerclangxxpython3.6:
     working_directory: ~/test
     macos:
       xcode: "9.0"
     environment:
-      - CONFIG: "osx_python3.6"
+      - CONFIG: "osx_cxx_compilerclangxxpython3.6"
     steps:
       - checkout
       - run:
@@ -135,12 +135,12 @@ jobs:
       - run:
           # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
           command: ./.circleci/run_osx_build.sh
-  build_osx_python3.7:
+  build_osx_cxx_compilerclangxxpython3.7:
     working_directory: ~/test
     macos:
       xcode: "9.0"
     environment:
-      - CONFIG: "osx_python3.7"
+      - CONFIG: "osx_cxx_compilerclangxxpython3.7"
     steps:
       - checkout
       - run:
@@ -162,6 +162,6 @@ workflows:
       - build_linux_cxx_compilertoolchain_cxxpython2.7
       - build_linux_cxx_compilertoolchain_cxxpython3.6
       - build_linux_cxx_compilertoolchain_cxxpython3.7
-      - build_osx_python2.7
-      - build_osx_python3.6
-      - build_osx_python3.7
+      - build_osx_cxx_compilerclangxxpython2.7
+      - build_osx_cxx_compilerclangxxpython3.6
+      - build_osx_cxx_compilerclangxxpython3.7
