MNT: Re-rendered with conda-build 3.17.8, conda-smithy 3.3.2, and conda-forge-pinning 2019.03.17

--- a/.ci_support/linux_python2.7.yaml
+++ b/.ci_support/linux_python2.7.yaml
@@ -10,8 +10,8 @@ docker_image:
 - condaforge/linux-anvil-comp7
 libblas:
 - 3.8 *netlib
-libcblas:
-- 3.8 *netlib
+liblapack:
+- 3.8.0 *netlib
 numpy:
 - '1.9'
 pin_run_as_build:
