--- a/.ci_support/osx_python3.7.yaml
+++ b/.ci_support/osx_python3.7.yaml
@@ -10,8 +10,8 @@ cxx_compiler_version:
 - '4'
 libblas:
 - 3.8 *netlib
-libcblas:
-- 3.8 *netlib
+liblapack:
+- 3.8.0 *netlib
 macos_machine:
 - x86_64-apple-darwin13.4.0
 macos_min_version:
