--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -3,3 +3,6 @@ max_py_ver: '37'
 max_r_ver: '35'
 provider: {osx: circle}
 conda_forge_output_validation: true
+github:
+  branch_name: main
+  tooling_branch_name: main
