--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,10 +1,9 @@
 compiler_stack: comp7
-max_py_ver: '37'
-max_r_ver: '35'
-provider: {osx: circle}
+max_py_ver: "37"
+max_r_ver: "35"
 conda_forge_output_validation: true
 github:
   branch_name: main
   tooling_branch_name: main
 conda_build:
-  pkg_format: '2'
+  pkg_format: "2"
