MNT: Re-rendered with conda-build 24.9.0, conda-smithy 3.44.2, and conda-forge-pinning 2024.11.08.10.03.25

--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,7 +1,7 @@
 compiler_stack: comp7
-max_py_ver: "37"
-max_r_ver: "35"
 conda_forge_output_validation: true
+build_platform:
+  osx_arm64: osx_64
 github:
   branch_name: main
   tooling_branch_name: main
