--- a/.ci_support/linux_64_numpy1.23python3.11.____cpython.yaml
+++ b/.ci_support/linux_64_numpy1.23python3.11.____cpython.yaml
@@ -1,22 +1,29 @@
+cdt_name:
+- cos7
 channel_sources:
-- conda-forge,defaults
+- conda-forge
 channel_targets:
 - conda-forge main
 cxx_compiler:
 - gxx
 cxx_compiler_version:
-- '7'
+- '13'
 docker_image:
-- condaforge/linux-anvil-comp7
+- quay.io/condaforge/linux-anvil-cos7-x86_64
 libblas:
-- 3.8 *netlib
+- 3.9 *netlib
 liblapack:
-- 3.8.0 *netlib
+- 3.9 *netlib
 numpy:
-- '1.14'
+- '1.23'
 pin_run_as_build:
   python:
     min_pin: x.x
     max_pin: x.x
 python:
-- '3.7'
+- 3.11.* *_cpython
+target_platform:
+- linux-64
+zip_keys:
+- - python
+  - numpy
