--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,7 +27,9 @@ build:
 requirements:
   build:
     - {{ compiler("cxx") }}
-    - llvm-openmp                    # [osx]
+    - llvm-openmp      
+    - python                                 # [build_platform != target_platform]
+    - cross-python_{{ target_platform }}     # [build_platform != target_platform]              # [osx]
   host:
     - libblas
     - liblapack
