--- a/.ci_support/linux_64_numpy1.22python3.10.____cpython.yaml
+++ b/.ci_support/linux_64_numpy1.22python3.10.____cpython.yaml
@@ -1,3 +1,7 @@
+c_stdlib:
+- sysroot
+c_stdlib_version:
+- '2.17'
 cdt_name:
 - cos7
 channel_sources:
@@ -25,5 +29,7 @@ python:
 target_platform:
 - linux-64
 zip_keys:
+- - c_stdlib_version
+  - cdt_name
 - - python
   - numpy
