--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,11 +11,11 @@ source:
   url: https://github.com/getspams/spams-python/archive/refs/tags/v{{ version }}.tar.gz
   sha256: 67efbd1a23a2afb087df5b24267e9a5dbfa9ff44e7a01de5900aec2d54f4a97c
 
-  #patches:
+  patches:
     # patch setup.py to link to LLVM's OpenMP library instead of GCC's.
-    #- llvm_openmp_setup.py.patch  # [osx]
+    - llvm_openmp_setup.py.patch  # [osx]
     # array creation requires integers for shape specification.
-    #- spams.py.patch
+    - spams.py.patch
 
 build:
   skip: true  # [win or (osx and cxx_compiler == "toolchain_cxx")]
@@ -37,6 +37,7 @@ requirements:
     - pip
     - llvm-openmp                    # [osx]
     - numpy
+    - setuptools <74
   run:
     - python
     - llvm-openmp                    # [osx]
